--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "rcrowe/twigbridge": "^0.9.3",
-        "barryvdh/laravel-debugbar": "^2.3"
+        "barryvdh/laravel-debugbar": "^2.3",
+        "cviebrock/eloquent-sluggable": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
