--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "laravel/framework": "5.3.*",
         "rcrowe/twigbridge": "^0.9.3",
         "barryvdh/laravel-debugbar": "^2.3",
-        "cviebrock/eloquent-sluggable": "^4.1"
+        "cviebrock/eloquent-sluggable": "^4.1",
+        "fzaninotto/faker": "^1.6"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
