--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "cviebrock/eloquent-sluggable": "^4.1",
         "fzaninotto/faker": "^1.6",
-        "webpatser/laravel-countries": "^1.4"
+        "webpatser/laravel-countries": "^1.4",
+        "barryvdh/laravel-cors": "^0.8.2"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
