--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "lodash": "^4.14.0",
     "vue": "^1.0.26",
     "vue-resource": "^1.0.2"
+  },
+  "dependencies": {
+    "bloodhound-js": "^1.2.1",
+    "typeahead.js": "^0.11.1"
   }
 }
