--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-webpack-official": "^1.0.2",
+    "laravel-elixir-webpack-react": "^1.0.1",
     "lodash": "^4.14.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "vue": "^1.0.26",
     "vue-resource": "^1.0.2"
   },
